--- a/diegocostaportfolio/package.json
+++ b/diegocostaportfolio/package.json
@@ -9,7 +9,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "firebase": "^8.1.1",
+    "firebase": "^9.9.4",
+    "firebase-tools": "^11.9.0",
+    "git": "^0.1.5",
+    "node": "^18.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
